# duckdb-dbt-project

./: .gitignore  .user.yml  README.md  dbt_project.yml  profiles.yml  pyproject.toml  query_duckdb.py  requirements.txt  setup_database.py
analyses/: check_vehicle_availability_date.sql  query_cpk_avg_by_type.sql
macros/: generate_schema_name.sql
models/marts/: _marts__models.yml  mrt_cost_per_km.sql  mrt_fleet_availability.sql
models/staging/: _sources.yml  _staging__models.yml  stg_maintenance_costs.sql  stg_telemetry.sql  stg_vehicles.sql
seeds/: raw_maintenance_costs.csv  raw_telemetry.csv  raw_vehicles.csv
